# concepts-jupyter

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
notebooks/: market_performance.ipynb  market_performance.py  medoid_path_analysis.ipynb  medoid_path_analysis.py  path_analog_matching.ipynb  path_analog_matching.py
src/: config.py
src/analysis/: path_analysis.py  stats.py  transformation.py
src/dataio/: stooq.py  stooq_loader.py  yfinance_loader.py
