[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"src" = "src"}

[project]
name = "concepts-jupyter"
version = "0.1.0"
description = "Market analysis concepts using Jupyter Notebooks"
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "jupyterlab",
    "notebook",
    "nbformat",
    "joblib",
    "scipy",
    "requests",
    "yfinance",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.jupytext]
formats = "notebooks///ipynb,notebooks///py:percent"
# This ensures that when we save a notebook in Jupyter,
# a corresponding .py file is created/updated in the same directory.
